--- a/ansible/exercise/exercises-roles/roles/boundary/tasks/main.yaml
+++ b/ansible/exercise/exercises-roles/roles/boundary/tasks/main.yaml
@@ -33,6 +33,10 @@
   when:
     - "'boundary_lb' in group_names"
 
+# - include_tasks: init.yaml
+#   when:
+#     - "'boundary_controller' in group_names"
+
 - include_tasks: certbot.yaml
   when:
     - "'boundary_lb' in group_names"
