--- a/ansible/exercise/exercises-roles/roles/boundary/tasks/ssl.yaml
+++ b/ansible/exercise/exercises-roles/roles/boundary/tasks/ssl.yaml
@@ -1,13 +1,36 @@
 ---
-- name: Generate SSL certificate with Certbot
-  ansible.builtin.shell:
-    cmd: certbot certonly --standalone -d {{ public_url }} --non-interactive --agree-tos -m {{ author_email }}
+- name: Check if OpenSSL configuration exists
+  stat:
+    path: "{{ openssl_cnf_file }}"
+  register: openssl_config
+
+- name: Copy OpenSSL configuration
+  template:
+    src: openssl.cnf.j2
+    dest: "{{ openssl_cnf_file }}"
+  when: not openssl_config.stat.exists
+
+- name: Check if OpenSSL Cert exists
+  stat:
+    path: "{{ boundary_cert_pem }}"
+  register: boundary_cert_file
+
+- name: Generate private key and certificate
+  command:
+    cmd: "{{ item }}"
+  with_items:
+    - openssl genpkey -algorithm RSA -out {{ ca_key_pem }}
+    - openssl req -x509 -new -nodes -key {{ ca_key_pem }} -sha256 -days 3650 -out {{ ca_pem }} -subj "/CN={{ public_url }}"
+    - openssl genpkey -algorithm RSA -out {{ boundary_key_pem }}
+    - openssl req -new -key {{ boundary_key_pem }} -out {{ boundary_csr }} -subj "/CN={{ ansible_default_ipv4.address }}"
+    - openssl x509 -req -in {{ boundary_csr }} -CA {{ ca_pem }} -CAkey {{ ca_key_pem }} -CAcreateserial -out {{ boundary_cert_pem }} -days 365 -extensions v3_req -extfile {{ openssl_cnf_file }}
   delegate_to: "{{ groups['boundary_controller'][0] }}"
   run_once: true
+  when: not boundary_cert_file.stat.exists
 
 - name: Fetch certificate from the node
   ansible.builtin.fetch:
-    src: "/etc/letsencrypt/live/{{ public_url }}/fullchain.pem"
+    src: "{{ boundary_cert_pem }}"
     dest: "./certs/{{ inventory_hostname }}/boundary-cert.pem"
     flat: yes
   delegate_to: "{{ groups['boundary_controller'][0] }}"
@@ -15,7 +38,7 @@
 
 - name: Fetch private key from the node
   ansible.builtin.fetch:
-    src: "/etc/letsencrypt/live/{{ public_url }}/privkey.pem"
+    src: "{{ boundary_key_pem }}"
     dest: "./certs/{{ inventory_hostname }}/boundary-key.pem"
     flat: yes
   delegate_to: "{{ groups['boundary_controller'][0] }}"
