--- a/ansible/exercise/exercises-roles/swarm.yaml
+++ b/ansible/exercise/exercises-roles/swarm.yaml
@@ -7,7 +7,7 @@
 # Install application
 # - docker service create --name exercise-app --replicas 5 --publish published=3001,target=3000 glendmaatita/exercise-app:latest
 # - docker service ls
-- name: Privision Docker Swarm Cluster
+- name: Provision Docker Swarm Cluster
   become: yes
   hosts: swarm
   roles:
